syntax = "proto3";

package mizer;

service TransportApi {
  rpc SubscribeTransport (SubscribeTransportRequest) returns (stream Transport) {}
  rpc SetState (SetTransportRequest) returns (Transport) {}
  rpc SetBpm (SetBpmRequest) returns (Transport) {}
}

message SubscribeTransportRequest {}

message Transport {
  TransportState state = 1;
  double speed = 2;
  int64 frames = 3;
  double time = 4;
}

message SetTransportRequest {
  TransportState state = 1;
}

message SetBpmRequest {
  double bpm = 1;
}

enum TransportState {
  Stopped = 0;
  Paused = 1;
  Playing = 2;
}
